--- a/src/ui/test-pilot/src/App.css
+++ b/src/ui/test-pilot/src/App.css
@@ -13,13 +13,16 @@
 }
 
 .App-header {
+  position: absolute;
   background-color: #222;
   height: 60px;
-  padding: 20px;
-  color: white;
+  width: 100%;
+  color: white;  
+  top: 0;
 }
 
 .App-intro {
+  padding-top: 60px;
   font-size: large;
 }
 
